# shakebook

./: .gitignore  .gitlab-ci.yml  ChangeLog.md  GitbookTemplate.cabal  README  README.md  Shakefile.hs  bump-nixpkgs.sh  fetch-nixpkgs.nix  meta.txt  nixpkgs-src.json  nixpkgs.nix  package.yaml  push-cachix.hs  shell.nix  stack.yaml  stack2nix.nix  title.txt
css/: layout.css  layout.hs  style.css  style.hs
diagrams/: drawing.asc  tournament.hs
docker/: Dockerfile
js/: nav.js
notes/: 00-Introduction.md  example.md
plots/: cluster.hs
resources/: page.tmpl
