name:                GitbookTemplate
version:             0.1.0.0
synopsis:            Gitbook Template - Run stack exec -- shake build
description:         Please see README.md
homepage:            https://gitlab.com/locallycompact/GitbookTemplate
license:             PublicDomain
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable GitbookTemplate-exe
  hs-source-dirs:      .
  main-is:             Shakefile.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shake
  default-language:    Haskell2010
